--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist",
-    "src"
+    "dist/**/*",
+    "README.md"
   ],
   "repository": "https://github.com/EverestSwap/sdk",
   "keywords": [
