--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@everestswap/sdk",
   "license": "MIT",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "🛠 An SDK for building applications on top of Everest.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -14,7 +14,7 @@
     "everest",
     "swap",
     "ICE",
-    "ICY",
+    "ICZ",
     "ICON",
     "EVRS"
   ],
