--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@everestswap/sdk",
   "license": "MIT",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "🛠 An SDK for building applications on top of Everest.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -17,7 +17,7 @@
     "ICON",
     "EVRS"
   ],
-  "module": "dist/everestswap-sdk.esm.js",
+  "module": "dist/sdk.esm.js",
   "scripts": {
     "lint": "tsdx lint src",
     "build": "tsdx build",
